fix : VoteRepository 를 CrudRepository 로 변경